fixed the why-we-do-what-we-do header alignment

--- a/oldhag_Webapp/public/css/homePage.css
+++ b/oldhag_Webapp/public/css/homePage.css
@@ -243,7 +243,7 @@ h2 {
   background-color:white;
   text-align:center;
   padding:50px 80px;
-  text-align: justify;
+  text-align: center;
 }
 
 #history-container {
